# release

./: HISTORY.md  MANIFEST.in  README.md  requirements.in  requirements.txt  setup.cfg  setup.py
release/: __init__.py  config.py  utils.py
release/resources/: changelog_template.md
track_changes/: __init__.py  __main__.py  _version.py  utils.py
track_changes/resources/: changelog_template.md
