# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.


[metadata]
name = release
version = 0.0.1

[versioneer]
VCS = git
style = pep440-xzp
versionfile_source = release/_version.py
versionfile_build = release/_version.py
tag_prefix =
parentdir_prefix = release

