# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.


[metadata]
name = track_changes
version = 0.0.1

[versioneer]
VCS = git
style = pep440
versionfile_source = track_changes/_version.py
versionfile_build = track_changes/_version.py
tag_prefix =
parentdir_prefix = track_changes

